<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.guias.GuiasFiltrarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvTipo"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/guia_filtrar_tipo"
                app:boxBackgroundColor="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.9">

                <AutoCompleteTextView
                    android:id="@+id/filtrar_guia_tipo_sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:fontFamily="@font/roboto"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvEstado"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/guia_filtrar_estado"
                app:boxBackgroundColor="@null"
                app:layout_constraintEnd_toEndOf="@+id/tvTipo"
                app:layout_constraintStart_toStartOf="@+id/tvTipo"
                app:layout_constraintTop_toBottomOf="@+id/tvTipo">

                <AutoCompleteTextView
                    android:id="@+id/filtrar_guia_estado_sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:editable="false"
                    android:fontFamily="@font/roboto"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/guia_filtrar_fecha"
                app:boxBackgroundColor="@null"
                app:layout_constraintBottom_toTopOf="@+id/btnAplicarFiltros"
                app:layout_constraintEnd_toEndOf="@+id/tvEstado"
                app:layout_constraintStart_toStartOf="@+id/tvEstado"
                app:layout_constraintTop_toBottomOf="@+id/tvEstado"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filtrar_guia_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:fontFamily="@font/roboto"
                    android:inputType="date"
                    android:textSize="17sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAplicarFiltros"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/btn_Filtrar"
                android:textAllCaps="false"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvFecha"
                app:layout_constraintStart_toStartOf="@+id/tvFecha"
                app:layout_constraintTop_toBottomOf="@+id/tvFecha"
                app:layout_constraintVertical_chainStyle="spread_inside" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>